@@ -1,3 +1,7 @@
+2015-07-17  Carl Hetherington  <cth@carlh.net>
+
+	* Improve still-image filename sorting.
+
 2015-07-16  Carl Hetherington  <cth@carlh.net>
 
 	* Updated ru_RU translation from Igor Voytovich.
